# Wireless-Audio-Accessory-Simulator

./: .gitignore  BUILD_VERIFICATION.md  CMakeLists.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.bat  build.sh
accessory/include/accessory/: audio_streamer.h  connection_fsm.h  crypto.h  telemetry.h  transport.h
accessory/src/: audio_streamer.cpp  connection_fsm.cpp  crypto.cpp  main.cpp  telemetry.cpp  transport.cpp
common/include/: protocol.h
common/src/: protocol.cpp
docs/: architecture.md  architecture_visual.md  state_machine.md  testing.md  timing_diagram.md
host/include/host/: audio_sync.h  device_manager.h  telemetry_processor.h  transport.h
host/src/: audio_sync.cpp  device_manager.cpp  main.cpp  telemetry_processor.cpp  transport.cpp
